# waybarconf

./: Cargo.toml  README.md  config.jsonc  dependencies.sh  install.sh  style.css
presets/: compact-pill.wc  config.jsonc  outline.wc  pill.wc  square.wc  standard.wc
presets/bricks/: advanced_weather.json  arch_updates.json  battery_percent.json  clock_fancy.json  cpu_graph.json  hardware_monitor.json  hyprland_workspaces.json  media_player.json  weather_simple.json  win_audio.json  win_clock.json  win_network.json  win_power.json  win_start.json  win_taskbar.json
presets/colors/: adapta.css  arc.css  black.css  catppuccin.css  cyberpunk.css  dark_emerald.css  dracula.css  everforest-light.css  everforest.css  glacier_minimal.css  gruvbox.css  lavender-pastel.css  lovelace.css  navy.css  nord.css  onedark.css  paper.css  sakura_light.css  solarized-dark.css  solarized.css  sunrise_blue.css  sunset_orange.css  tokyonight.css  wallpaper.css  yousai.css
presets/layouts/: compact-pill.css  outline.css  pill.css  square.css  standard.css
presets/scripts/: check_updates.sh  customize.sh  global_color_scheme_changer.sh  mute.sh  placeholder.rasi  vertical_style_menu_2.rasi  weather.py
presets/scripts/todo/: todo.sh
src/: config.rs  main.rs
